# diesel-guard

./: .dockerignore  .pre-commit-hooks.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  build.rs  ci-cd.html  codecov.yml  configuration.html  custom-checks.html  deny.toml  diesel-guard.toml.example  dist-workspace.toml  frameworks.html  index.html  installation.html  justfile  print.html  quickstart.html  safety-assured.html  searcher-c2a407aa.js  searchindex-934e709b.js  toc-d94fc9b6.js  toc.html
.github/: dependabot.yml  pull_request_template.md
checks/: add-column-default.html  adding-index.html  adding-unique-constraint.html  changing-column-type.html  char-field.html  creating-extension.html  dropping-column.html  dropping-constraint.html  dropping-database.html  dropping-index.html  dropping-primary-key.html  dropping-table.html  generated-column.html  json-field.html  multiple-column-index.html  overview.html  reindexing.html  renaming-column.html  renaming-table.html  serial-primary-key.html  set-not-null.html  short-primary-key.html  timestamp-field.html  truncating-table.html  unnamed-constraint.html
docs/: book.toml
examples/: limit_columns_per_index.rhai  no_truncate_in_production.rhai  no_unlogged_tables.rhai  require_concurrent_index.rhai  require_if_exists_on_drop.rhai  require_index_name_prefix.rhai
src/: ast_dump.rs  config.rs  error.rs  formatters.rs  lib.rs  lsp.rs  main.rs  output.rs  safety_checker.rs  scripting.rs  violation.rs  wizard.rs
tests/: check_test.rs  config_test.rs  (+11 more)
(+198 files in other folders)
