[package]
name = "diesel-guard"
version = "0.6.0"
edition = "2021"
authors = ["Alex Yarotsky <https://github.com/ayarotsky>"]
description = "Catch dangerous PostgreSQL migrations in Diesel and SQLx before they take down production"
license = "MIT"
repository = "https://github.com/ayarotsky/diesel-guard"
homepage = "https://github.com/ayarotsky/diesel-guard"
readme = "README.md"
keywords = ["diesel", "migrations", "postgresql", "database", "safety"]
categories = ["database", "development-tools"]

[dependencies]
# SQL parsing
pg_query = "6"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config file
toml = "1.0"

# Scripting engine for custom checks
rhai = { version = "1", features = ["serde", "sync"] }

# Path handling
camino = "1.2"
walkdir = "2.4"

# Validation
regex = "1.12"

# Error reporting
miette = { version = "7.0", features = ["fancy"] }

# Derive macros
derive_more = { version = "2.1", features = ["display", "from", "error"] }

[dev-dependencies]
tempfile = "3.25"
